--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="tabbottom__items">
 
-                <div class="tabbottom__item">Today</div>
+                <div class="tabbottom__item">Day</div>
                 
                 <div class="tabbottom__item">Month</div>
                 
